--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cli": "^1.0.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.483.0",
-    "next": "15.2.3",
+    "next": "^15.2.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
